crates/carta/tests/snapshots/golden_writer__revealjs__common__line-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<div class="line-block">first line<br />
second line</div>
</section>
