crates/carta/tests/snapshots/golden_writer__revealjs__common__link-autolink.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><a href="http://example.com" class="uri">http://example.com</a></p>
</section>
