crates/carta/tests/snapshots/golden_writer__revealjs__common__link-empty-label.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>before <a href="http://example.com"></a> after</p>
</section>
