crates/carta/tests/snapshots/golden_writer__revealjs__common__link-in-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><a href="u1">outer <span id="iid" class="ic">inner</span> end</a></p>
</section>
