crates/carta/tests/snapshots/golden_writer__revealjs__common__link-title-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><a href="http://example.com" id="l" class="ext"
title="a title">text</a></p>
</section>
