crates/carta/tests/snapshots/golden_writer__revealjs__common__link-url-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><a href="http://example.com/a%20b#frag">x</a></p>
</section>
