crates/carta/tests/snapshots/golden_writer__revealjs__common__list-bullet-in-definition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<dl>
<dt>term</dt>
<dd>
<ul>
<li>alpha</li>
<li>beta</li>
</ul>
</dd>
</dl>
</section>
