crates/carta/tests/snapshots/golden_writer__revealjs__common__list-bullet-in-ordered.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<ol type="1">
<li>first</li>
<li>second
<ul>
<li>suba</li>
<li>subb</li>
</ul></li>
<li>third</li>
</ol>
</section>
