crates/carta/tests/snapshots/golden_writer__revealjs__common__list-nested-first-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<ul>
<li><ul>
<li>inner one</li>
<li>inner two</li>
</ul></li>
<li>outer two</li>
</ul>
</section>
