crates/carta/tests/snapshots/golden_writer__revealjs__common__nested-emphasis.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><em>emph with <strong>strong</strong> inside</em> end</p>
</section>
