crates/carta/tests/snapshots/golden_writer__revealjs__common__nonascii-escape.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>café résumé naïve</p>
</section>
